--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="style.css"
 </head>
 <body>
-    <header>
-    <h1>Vai ser uma imagem aqui</h1>
-    <ul>
-        <li>Estudante</li>
-        <li>Escola</li>
+    <header class="cabecalho">
+    <img class="cabecalho-imagem" src="logo colegio.jpg" alt="logo do colegio">
+    <ul class="cabecalho-lista">
+        <li class="cabecalho-lista-item">Estudante</li>
+        <li class="cabecalho-lista-item">Escola</li>
     </ul>
 </header>
 
