--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css"
 </head>
+
 <body>
     <header class="cabecalho">
     <img class="cabecalho-imagem" src="logo colegio.jpg" alt="logo do colegio">
@@ -15,6 +16,14 @@
         <li class="cabecalho-lista-item">Escola</li>
     </ul>
 </header>
-
+<section class="escola">
+    <div class="escola-div-conteudo">
+    <h2 class="escola-titulo">Sobre a Escola</h2>
+    <p class="escola-texto-um">Nosso objetivo é ajudar os alunos a serem bem-sucedidos na escola e na vida. Oferecemos acompanhamento em grupo e individual, além de atividades de reforço e de enriquecimento. Tudo isso com o objetivo de melhorar o desempenho dos alunos.</p>
+    <p class="escola-texto-dois">llll</p> 
+    </div>
+    <img class="escola-imagem" src="Formula-bro.png" alt="Professora no quadro.">
+</section>
 </body>
+
 </html>
